# pico-projects

./: CMakeLists.txt  LICENSE  README.md
io_uart/: CMakeLists.txt  main.c  readme.md
mcp23s17_io_expander/: CMakeLists.txt  main.c  mcp23s17.h  readme.md
simulated_mcp23s17/: CMakeLists.txt  main.c  readme.md
test/: CMakeLists.txt  readme.md  test.c
